test/compilable/imports/imp1a.d
module imports.imp1a;

auto foo() { return 1; }
