test/fail_compilation/fail331.d
auto foo()
{
    typeof(return) result;
    return result;
}

